# madkhal

./: .gitignore  .ocamlformat  LICENSE  README.md  dune  dune-project  madkhal.opam
lib/handlers/: admin_handler.ml  dune  gateway_handler.ml
lib/routing/: dune  router.ml
lib/types/: dune  request.ml  response.ml  routing.ml  schema.ml  transformation.ml  validation.ml
lib/validation/: dune  validator.ml
test/unit/: dune  test_routing.ml  test_validator.ml
